add server libs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
     "symphony-api-client-node": "^1.0.4"
   }
 }
