--- a/symphony-click-to-call-app/src/main/resources/config.json
+++ b/symphony-click-to-call-app/src/main/resources/config.json
@@ -8,7 +8,7 @@
   "agentHost": "develop2.symphony.com",
   "agentPort": 443,
   "appId": "citi-rfq",
-  "appPrivateKeyPath": "/Users/kl68884/projects/hackathon/citi-sym-hackathon-2019/symphony-click-to-call-app/src/main/resources/bot_134/",
+  "appPrivateKeyPath": "C:/Users/Jiehong/Documents/Projects/citi-sym-hackathon-2019/symphony-click-to-call-app/src/main/resources/bot_134",
   "appPrivateKeyName": "firm1_innovate_hackathon_bot_134_privatekey.pem",
   "truststorePath": "internal_truststore",
   "truststorePassword": "changeit"
